--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/dingjunjie0501/futian-index#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.2"
   }
